# hautai-vault

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  CLAUDE.md  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
hautai_vault/: __init__.py  client.py  commands.py  logger.py  settings.py  utils.py
src/hautai_vault/: __init__.py
tests/: conftest.py  test_azure.py  test_settings.py  test_vault.py
