[project]
name = "hautai_vault"
version = "4.0.0"
description = "A library providing means to interact with Hashicorp Vault"
authors = [
    { name = "Fedor Eremeev", email = "f.eremeev@haut.ai" },
]
requires-python = ">=3.9,<4"
dependencies = [
    "pydantic>=2.5.2,<3",
    "hvac>=2.0.0,<3",
    "pydantic-settings>=2.1.0,<3",
]

[project.urls]
Repository = "https://pkgs.dev.azure.com/haut-ai/_packaging/haut-ai/pypi/upload"

[dependency-groups]
dev = [
    "ipython>=8.18.1,<9",
    "mypy>=1.7.1,<2",
    "pytest>=7.4.3,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-xdist>=3.5.0,<4",
    "rich>=13.7.0,<14",
    "ruff>=0.10.0,<0.11",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "haut_ai"
url = "https://pkgs.dev.azure.com/haut-ai/_packaging/haut-ai/pypi/simple/"
explicit = true

[[tool.uv.index]]
name = "haut_ai_publish"
url = "https://pkgs.dev.azure.com/haut-ai/_packaging/haut-ai/pypi/upload/"
explicit = true

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
default = true

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
